--- a/index.html
+++ b/index.html
@@ -259,13 +259,13 @@
         <div class="row">
             <div class="col-12 col-lg-6">
                 <div class="image-wrapper">
-                    <img src="assets/images/climber-4-492x1080.png" alt="Mobirise">
+                    <img src="assets/images/screen-shot-2021-04-28-at-11.17.23-pm-1076x673.png" alt="Mobirise">
                     
                 </div>
             </div>
             <div class="col-12 col-lg-6">
                 <div class="image-wrapper">
-                    <img src="assets/images/798b907a-b5ed-475d-bc3c-e227eb5565fb-719x1280.png" alt="Mobirise">
+                    <img src="assets/images/screen-shot-2021-04-28-at-11.18.35-pm-1076x673.png" alt="Mobirise">
                     
                 </div>
             </div>
@@ -280,7 +280,7 @@
 
     <div class="container">
         <div class="row justify-content-center">
-            <div class="col-12 col-lg-9">
+            <div class="col-12 col-lg-7">
                 <div class="image-wrapper">
                     <img src="assets/images/img-7815-1-2-1080x607.png" alt="Mobirise">
                     <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">
@@ -358,7 +358,7 @@
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/s" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;"><a href="https://mobirise.site/d" style="color:#aaa;">This web page</a> was designed with Mobirise</p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/n" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Mobirise web page creator - <a href="https://mobirise.site/p" style="color:#aaa;">See here</a></p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
