--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <div class="card p-4 p-md-3 col-md-6 col-lg-4">
                 <div class="card-box">
                     <div class="title">
-                        <span class="num mbr-fonts-style display-1"><strong>&nbsp;</strong></span>
+                        <span class="num mbr-fonts-style display-7"><strong>&nbsp;</strong></span>
                     </div>
                     <h4 class="card-title mbr-fonts-style display-5">
                         <strong>cinema</strong></h4>
@@ -105,7 +105,7 @@
             <div class="card p-4 p-md-3 col-md-6 col-lg-4">
                 <div class="card-box">
                     <div class="title">
-                        <span class="num mbr-fonts-style display-1"><strong>&nbsp;</strong></span>
+                        <span class="num mbr-fonts-style display-7"><strong>&nbsp;</strong></span>
                     </div>
                     <h4 class="card-title mbr-fonts-style display-5"><strong>music videos</strong></h4>
                     
@@ -114,7 +114,7 @@
             <div class="card p-4 p-md-3 col-md-6 col-lg-4">
                 <div class="card-box">
                     <div class="title">
-                        <span class="num mbr-fonts-style display-1"><strong>&nbsp;</strong></span>
+                        <span class="num mbr-fonts-style display-7"><strong>&nbsp;</strong></span>
                     </div>
                     <h4 class="card-title mbr-fonts-style display-5"><strong>advertising</strong></h4>
                     
@@ -410,7 +410,7 @@
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/p" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Built with Mobirise - <a href="https://mobirise.site/m" style="color:#aaa;">Check it</a></p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/e" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Set up a free site - <a href="https://mobirise.site/w" style="color:#aaa;">Get more</a></p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
